update model about me, add github url

--- a/aboutme/templates/aboutme/aboutme_app.html
+++ b/aboutme/templates/aboutme/aboutme_app.html
@@ -26,7 +26,7 @@
                     <br>
                     <a v-bind:href=m.contacts_pikabu target="_blank">{{ m.contacts_pikabu }}</a>
                     <br>
-
+                     <a v-bind:href=m.contacts_github target="_blank">{{ m.contacts_github }}</a>
                 </div>
                 <div class="mt-2">
                     <div v-html="m.about"></div>
