--- a/aboutme/templates/aboutme/aboutme_app.html
+++ b/aboutme/templates/aboutme/aboutme_app.html
@@ -35,6 +35,10 @@
             </div>
             <div class="col-4 mt-2">
                 <img class="img-fluid mt-2 me-2 shadow-sm" v-bind:src="m.avatar"/>
+                <div class="mt-2 text-break text-black-50 text-center">Данный блог разработан мной, и постоянно дописывается.<br>
+                    Я часто создаю спонтанные проекты, которые потом становятся интересны людям, возможно и этот не исключение <br>
+                    Исходоный код открыт и выложен на <a href="https://github.com/Scryptor/Django_blog">GitHub</a>
+                </div>
             </div>
 
         </div>
