--- a/blog/templates/blog/blog_app.html
+++ b/blog/templates/blog/blog_app.html
@@ -28,9 +28,10 @@
             </div>
 
         </div>
-        <div>
-            <nav aria-label="PageNumbers">
-                <ul class="pagination">
+
+        <div class="text-center">
+            <nav aria-label="PageNumbers" class="text-center">
+                <ul class="pagination text-center">
                     <li class="page-item"><a class="page-link" style="cursor: pointer" v-show="prevpage"
                                              @click="goToPrevPage">i--</a></li>
                     <li class="page-item"><a class="page-link" href="#">{{ currpage }}</a></li>
