--- a/blog/templates/blog/blog_article.html
+++ b/blog/templates/blog/blog_article.html
@@ -11,7 +11,7 @@
             {% endthumbnail %}
         </div>
         <div class="p-3">
-            <div class="ps-2 fs-4">
+            <div class="ps-2 fs-4 text-break">
                 {{ article.full_text|safe }}
             </div>
             <p class="small float-end pt-4">
