--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
 <body style="background-color: #f0f0f0">
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 shadow-sm">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 shadow-sm" id="index_app">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerD"
                 aria-controls="navbarTogglerD" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,14 +64,14 @@
                     <a class="nav-link active" aria-current="page" href="/admin">Админка</a>
                 </li>
             </ul>
-            <form class="d-flex" action="{% url 'home' %}" method="get">
-                <input class="form-control me-2" type="search" placeholder="Что ищем?" aria-label="Искать" name="query">
+            <form class="d-flex" method="get" action="/">
+                <input class="form-control me-2" type="search" placeholder="Что ищем?"
+                       aria-label="Искать" name="query">
                 <button class="btn btn-outline-success" type="submit">Искать</button>
             </form>
         </div>
     </div>
 </nav>
-
 
 <div class="container">
     {% block application %} {% endblock %}
