--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/admin">Админка</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/prodmenu">Генератор еды</a>
+                </li>
             </ul>
             <form class="d-flex" method="get" action="/">
                 <input class="form-control me-2" type="search" placeholder="Что ищем?"
