--- a/prodmenu/templates/prodmenu/prodmenu_app.html
+++ b/prodmenu/templates/prodmenu/prodmenu_app.html
@@ -94,39 +94,9 @@
                 },
                 methods: {
                     getRandomFood() {
-
-                        let idx1 = Math.floor(Math.random() * this.products_independant.length);
-                        while (idx1 === this.idxprev1) {
-                            idx1 = Math.floor(Math.random() * this.products_independant.length);
-                        }
-                        this.idxprev1 = idx1
-                        this.randomPr_indep = this.products_independant[idx1].name
-
-
-                        let garOsn = ""
-                        let idx2 = Math.floor(Math.random() * this.products_garnir.length);
-                        while (idx2 === this.idxprev2) {
-                            idx2 = Math.floor(Math.random() * this.products_garnir.length);
-                        }
-                        this.idxprev2 = idx2
-
-                        garOsn = this.products_garnir[idx2].name
-
-                        let idx3 = Math.floor(Math.random() * this.products_osnova.length);
-                        while (idx3 === this.idxprev3) {
-                            idx3 = Math.floor(Math.random() * this.products_osnova.length);
-                        }
-                        this.idxprev3 = idx3
-
-                        garOsn += " и " + this.products_osnova [idx3].name
-                        this.randomPr_garOsn = garOsn
-
-                        let idx4 = Math.floor(Math.random() * this.products_soup.length);
-                        while (idx4 === this.idxprev4) {
-                            idx4 = Math.floor(Math.random() * this.products_soup.length);
-                        }
-                        this.idxprev4 = idx4
-                        this.randomPr_soup = this.products_soup[idx4].name
+                        this.getIndepFood();
+                        this.getGarOsnFood();
+                        this.getSoupFood();
                     },
                     getIndepFood() {
                         let idx1 = Math.floor(Math.random() * this.products_independant.length);
