--- a/prodmenu/templates/prodmenu/prodmenu_app.html
+++ b/prodmenu/templates/prodmenu/prodmenu_app.html
@@ -48,94 +48,14 @@
                 </div>
             </div>
         </div>
+        <div class="text-break text-center text-black-50 mt-2">
+            Моя девушка постоянно спрашивает, что сегодня приготовоить, чтобы не мучать себя, придумывая каждый раз,
+            я составил список блюд, которые она готовит, и написал генератор еды )
+        </div>
 
     </div>
     {% endverbatim %}
 
-    <script>
-        new Vue({
-                el: '#prodmenu_app',
-                data: {
-                    products: [],
-                    products_independant: [],
-                    products_garnir: [],
-                    products_osnova: [],
-                    products_soup: [],
-                    randomPr_indep: "",
-                    randomPr_garOsn: "",
-                    randomPr_soup: "",
-                    idxprev1: -1,
-                    idxprev2: -1,
-                    idxprev3: -1,
-                    idxprev4: -1,
-                },
-                created: function () {
-                    const vm = this
-                    axios.get('/api/v1/food/prodmenu/').then(function (response) {
-                        vm.products = response.data
-
-                        vm.products_independant = response.data.filter((value, index) => value.type_id === 1);
-                        vm.products_garnir = response.data.filter((value, index) => value.type_id === 2);
-                        vm.products_osnova = response.data.filter((value, index) => value.type_id === 3);
-                        vm.products_soup = response.data.filter((value, index) => value.type_id === 4);
-
-                        vm.idxprev1 = Math.floor(Math.random() * vm.products_independant.length);
-                        vm.idxprev2 = Math.floor(Math.random() * vm.products_garnir.length);
-                        vm.idxprev3 = Math.floor(Math.random() * vm.products_osnova.length);
-                        vm.idxprev4 = Math.floor(Math.random() * vm.products_soup.length);
-
-                        vm.randomPr_indep = vm.products_independant[vm.idxprev1].name
-                        let garOsn = ""
-                        garOsn = vm.products_garnir[vm.idxprev2].name
-                        garOsn += " и " + vm.products_osnova [vm.idxprev3].name
-                        vm.randomPr_garOsn = garOsn
-                        vm.randomPr_soup = vm.products_soup[vm.idxprev4].name
-                    })
-                },
-                methods: {
-                    getRandomFood() {
-                        this.getIndepFood();
-                        this.getGarOsnFood();
-                        this.getSoupFood();
-                    },
-                    getIndepFood() {
-                        let idx1 = Math.floor(Math.random() * this.products_independant.length);
-                        while (idx1 === this.idxprev1) {
-                            idx1 = Math.floor(Math.random() * this.products_independant.length);
-                        }
-                        this.idxprev1 = idx1
-                        this.randomPr_indep = this.products_independant[idx1].name
-                    },
-                    getGarOsnFood() {
-                        let garOsn = ""
-                        let idx2 = Math.floor(Math.random() * this.products_garnir.length);
-                        while (idx2 === this.idxprev2) {
-                            idx2 = Math.floor(Math.random() * this.products_garnir.length);
-                        }
-                        this.idxprev2 = idx2
-
-                        garOsn = this.products_garnir[idx2].name
-
-                        let idx3 = Math.floor(Math.random() * this.products_osnova.length);
-                        while (idx3 === this.idxprev3) {
-                            idx3 = Math.floor(Math.random() * this.products_osnova.length);
-                        }
-                        this.idxprev3 = idx3
-
-                        garOsn += " и " + this.products_osnova [idx3].name
-                        this.randomPr_garOsn = garOsn
-                    },
-                    getSoupFood() {
-                        let idx4 = Math.floor(Math.random() * this.products_soup.length);
-                        while (idx4 === this.idxprev4) {
-                            idx4 = Math.floor(Math.random() * this.products_soup.length);
-                        }
-                        this.idxprev4 = idx4
-                        this.randomPr_soup = this.products_soup[idx4].name
-                    }
-                }
-            }
-        )
-    </script>
+    <script src="/static/prodmenu.js"></script>
 
 {% endblock %}
